package system;

public class Main {

    public static void main(String[] args) {
	// write your code here
    }
}
