package system;
import java.util.ArrayList;

public class TransactionRepo implements Repo<Transaction> {
    @Override
    public ArrayList<Transaction> readAll() {
        return null;
    }

    @Override
    public void delete(int id) {

    }

    @Override
    public void update(Transaction transaction) {

    }

    @Override
    public void create(Transaction transaction) {

    }
}
