package system;

import java.util.ArrayList;

public class UserRepo implements Repo<User>{

    @Override
    public ArrayList<User> readAll() {
        return null;
    }

    @Override
    public void create(User user) {

    }

    @Override
    public void update(User user) {

    }

    @Override
    public void delete(int id) {

    }
}
